refactor: 💡 add JSdoc comments
